# plectr

./: .gitignore  LICENSE.md  NOTICE  README.md  ROADMAP.csv  plectr.yaml
agent/: Cargo.toml
agent/src/: client.rs  config.rs  main.rs
agent/src/commands/: auth.rs  clone.rs  init.rs  log.rs  mod.rs  save.rs  status.rs
core/: .dockerignore  .prettierrc  Cargo.toml  Dockerfile
core/migrations/: 0001_initial_schema.sql  0002_docker_registry.sql  0003_rbac_system.sql  0004_unique_repo_names.sql  0005_fix_delete_cascade.sql  0006_repo_mirroring.sql  0007_ci_cd_schema.sql  0008_admin_and_runners.sql  0009_jobs_logs.sql  0010_releases_system.sql
core/src/: admin.rs  ai.rs  analytics.rs  auth.rs  crypto.rs  diff.rs  main.rs  mirror.rs  pipeline.rs  registry.rs  repo.rs  state.rs  storage.rs  validation.rs
infra/: Caddyfile  compose.yaml  init-db.sh
runner/: Cargo.toml  Dockerfile
runner/src/: main.rs
ui/: Dockerfile  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/admin/runners/: page.tsx
ui/app/api/auth/[...nextauth]/: route.ts
ui/app/login/: page.tsx
ui/app/repo/[name]/: page.tsx
ui/app/repo/[name]/pipelines/: page.tsx
ui/app/repo/[name]/pipelines/[id]/: page.tsx
ui/app/repo/[name]/reconcile/[id]/: page.tsx
ui/app/repo/[name]/settings/: page.tsx
ui/app/settings/profile/: page.tsx
ui/app/settings/tokens/: page.tsx
ui/components/: AuthButton.tsx  CreateRepoModal.tsx  Providers.tsx
ui/components/dashboard/: Dashboard.tsx
ui/components/icons/: PlectrLogo.tsx
ui/components/landing/: LandingPage.tsx
ui/components/merge/: ConflictEditor.tsx
ui/components/pipelines/: PipelineBadge.tsx
ui/components/repository/: CommitTimeline.tsx  ContainerRegistry.tsx  FileExplorer.tsx  FilePreview.tsx  ForgeConsole.tsx  ReleaseList.tsx  RepoCard.tsx
ui/components/repository/preview/: CodeViewer.tsx  CsvViewer.tsx  ImageViewer.tsx  MarkdownViewer.tsx
ui/components/repository/safetensors/: SafeTensorDashboard.tsx  normalize.ts  types.ts
ui/components/repository/safetensors/views/: HierarchyView.tsx  OverviewView.tsx  RawView.tsx  TableView.tsx
ui/components/ui/: SlidingTabs.tsx
ui/context/: ToastContext.tsx
ui/hooks/: useReconciliation.ts  useRepository.ts
ui/types/: repo.ts  syntax-highlighter.d.ts
ui/utils/: format.ts  icons.tsx
