[package]
name = "plectr"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2"
ignore = "0.4"
blake3 = "1.5"
hex = "0.4"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
directories = "5.0"
config = "0.13"
futures = "0.3"
chrono = "0.4"