[package]
name = "plectr-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ajout de "ws" ici
axum = { version = "0.7", features = ["multipart", "ws"] } 
tokio = { version = "1", features = ["full", "process"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-s3 = "0.33"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
duckdb = { version = "1.1", features = ["bundled"] } 
tempfile = "3.8"
safetensors = "0.4"
chrono = { version = "0.4", features = ["serde"] }
similar = { version = "2.4", features = ["inline", "text"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
jsonwebtoken = "9"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
serde_yaml = "0.9"
dashmap = "5.5"