[package]
name = "plectr-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.16"
anyhow = "1.0"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
bytes = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tar = "0.4"
flate2 = "1.0" 